<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/footsteps_silhouette_variant_svgrepo_com"
            android:title="@string/menu_steps" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_stacked_bar_chart_24"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/baseline_stacked_bar_chart_24"
            android:title="@string/reportday" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_person_pin_24"
            android:title="@string/menu_profile" />
    </group>
</menu>