<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.stepappv4.ui.Home.HomeFragment"
        android:label="@string/menu_steps"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.stepappv4.ui.Report.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_report"
        android:name="com.example.stepappv4.ui.DayFragment"
        android:label="Report Day"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.stepappv4.ui.Profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_slideshow" />
</navigation>